# cpp-helloworld

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: HelloWorld.hpp
lib/src/: HelloWorld.cpp
test/: CMakeLists.txt  main.cpp
